# captcha

./: .gitignore  Cargo.toml  LICENSE  README.md
captcha/: Cargo.toml
captcha/src/: captcha.rs  captcha_builder.rs  lib.rs
captcha_example_actix/: Cargo.toml
captcha_example_actix/src/: main.rs
captcha_examples/: Cargo.toml
captcha_examples/src/: main.rs
examples/: actix.rs  simple.rs
src/: captcha.rs  color.rs  lib.rs
