[package]
name = "captcha-a"
description = "a captcha library for rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version="0.24.3",default-features = false, features = ["png"]}
rusttype = "0.9.2"
rand = "0.8.5"
imageproc = "0.23.0"