[package]
name = "captcha_example_actix"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
captcha-a = { path = "../captcha",features = ["base64"]}
actix-web = { version = "4", default-features = false, features = ["macros"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
